--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,9 @@
 ---
 13.jpg: 13-1604d5b29831e1ab0386ca2d1375915c.jpg
+3.jpg: 3-31d082204959993faf32a458256e73c9.jpg
+5.jpg: 5-6d8e31d9d14027fcd86000d9a0216f7e.jpg
+786.jpg: 786-2f2dcc235509d19c34c7e88468ee7f8d.jpg
 images.jpeg: images-bfd43a357b5663b265688286b5431b86.jpeg
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
-application.js: application-f79f879edae5d837e15161fba0ee9d3d.js
-application.css: application-b0e79f8d2ad25bcaf87a4b9c3d9801d5.css
+application.js: application-4ba035647248ee9014c15ad129064e95.js
+application.css: application-5ac111a0475050f0a4a09ee7dd8b1665.css
